<resources>
    <string name="app_name">NativeWidgets</string>
    <string name="title_activity_toggle_button">ToggleButtonActivity</string>

    <string-array name="mobile_operating_systems_array">
        <item>Android</item>
        <item>iOS</item>
        <item>Windows</item>
        <item>Blackberry</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

    <string name="tvmail">Mail to Link Click here <a href="mailto:johnvinodh.talluri@kony.com?Subject=Test%20mail" target="_top">johnvinodh.talluri@kony.com</a></string>

    <string name="tvDefaultLink"> Default Link \n<a href="http://docs.kony.com/konylibrary/visualizer/viz_widget_prog_guide/Default.htm">http://docs.kony.com/konylibrary/visualizer/viz_widget_prog_guide/Default.htm</a></string>
    <string name="browserURL">http://docs.google.com/gview?embedded=true</string>
    <string name="google_maps_key">AIzaSyDC5T76CmnIL2tjgdV2RIuUMVFYuB_BkIc</string>
    <string name="kony_listbox_custom_view">Kony ListBox/Custom View</string>
    <string name="open_accessibility_test_activity">Open Accessibility Test Activity</string>
    <string name="problem_type">Problem Type</string>
    <string name="open_kony_list_box">Open Kony List Box</string>
    <string name="comment">Comment</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="submit">Submit</string>
    <string name="base64pdf">JVBERi0xLjQgdmVyeXBkZi5jb20KMyAwIG9iagogPDwvTGVuZ3RoIDQgMCBSIC9GaWx0ZXIgL0ZsYXRlRGVjb2RlID4+CnN0cmVhbQp4nHMKUTBUMABCQwUzEwVzIwuFkFwUEUMjkIi+G5BvphCSBiZ9FDQ8UnNy8hXC84tyUjRDshRcQxQAOOAQ/WVuZHN0cmVhbQplbmRvYmoKNCAwIG9iago2MiBlbmRvYmoKMiAwIG9iagogPDwvUGFyZW50IDUgMCBSIC9NZWRpYUJveFswIDAgNjEyIDc5Ml0gL1R5cGUgL1BhZ2UgL0NvbnRlbnRzWzMgMCBSIF0gL1Jlc291cmNlcyA2IDAgUiA+PgplbmRvYmoKNiAwIG9iagogPDwvUHJvY1NldFsvUERGIC9UZXh0XSAvRm9udCA8PC9GMCAxIDAgUiA+Pgo+PgplbmRvYmoKNyAwIG9iagogPDwvQ3JlYXRvciAoVmVyeVBERiBGcmVlIFRleHQgVG8gUERGIENvbnZlcnRlciB2MS41KSAvUHJvZHVjZXIgKFZlcnlQREYuY29tIEluYyBcKGh0dHA6Ly93d3cudmVyeXBkZi5jb21cKSkgL0NyZWF0aW9uRGF0ZSAoRDoyMDE3MDYxMzA1NTEzMi0wOCcwMCcpIC9Nb2REYXRlIChEOjIwMTcwNjEzMDU1MTMyLTA4JzAwJykgPj4KZW5kb2JqCjEgMCBvYmoKIDw8L1R5cGUgL0ZvbnQgL1N1YnR5cGUgL1R5cGUxIC9FbmNvZGluZyAvV2luQW5zaUVuY29kaW5nIC9CYXNlRm9udCAvQ291cmllciA+PgplbmRvYmoKNSAwIG9iagogPDwvVHlwZSAvUGFnZXMgL0NvdW50IDEgL0tpZHNbMiAwIFIgXT4+CmVuZG9iago4IDAgb2JqCiA8PC9UeXBlIC9DYXRhbG9nIC9QYWdlcyA1IDAgUiA+PgplbmRvYmoKCnhyZWYKMCA5CjAwMDAwMDAwMDAgNjU1MzUgZg0KMDAwMDAwMDU0NCAwMDAwMCBuDQowMDAwMDAwMTc0IDAwMDAwIG4NCjAwMDAwMDAwMjEgMDAwMDAgbg0KMDAwMDAwMDE1NiAwMDAwMCBuDQowMDAwMDAwNjM5IDAwMDAwIG4NCjAwMDAwMDAyNzkgMDAwMDAgbg0KMDAwMDAwMDM0MiAwMDAwMCBuDQowMDAwMDAwNjk1IDAwMDAwIG4NCnRyYWlsZXIKIDw8L1NpemUgOSAvUm9vdCA4IDAgUiAvSW5mbyA3IDAgUiAvSURbPENFQkFBMjdBODFBODU2RjI0Mjk3MjcwMzNENTlDOTlDPjxDRUJBQTI3QTgxQTg1NkYyNDI5NzI3MDMzRDU5Qzk5Qz5dID4+CgpzdGFydHhyZWYKNzQ1CiUlRU9GDQo=</string>
</resources>
